--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="94d491">  <td>18/09/26 02:13:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testNGParallelTestingDemo.test1()[pri:0, instance:parrelTestingExample.testNGParallelTestingDemo@2ac273d3]">test1</td> 
-  <td>main@1585787493</td>   <td></td> </tr>
-<tr bgcolor="94d491">  <td>18/09/26 02:13:55</td>   <td>225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testNGParallelTestingDemo.test2()[pri:0, instance:parrelTestingExample.testNGParallelTestingDemo@2ac273d3]">test2</td> 
-  <td>main@1585787493</td>   <td></td> </tr>
-<tr bgcolor="94d491">  <td>18/09/26 02:14:08</td>   <td>13773</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testNGParallelTestingDemo.test3()[pri:0, instance:parrelTestingExample.testNGParallelTestingDemo@2ac273d3]">test3</td> 
-  <td>main@1585787493</td>   <td></td> </tr>
+<tr bgcolor="9c6faa">  <td>18/09/27 02:50:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testNgDependencyDemo.test2()[pri:0, instance:testNgDependency.testNgDependencyDemo@5ce81285]">test2</td> 
+  <td>main@1518864111</td>   <td></td> </tr>
+<tr bgcolor="9c6faa">  <td>18/09/27 02:50:01</td>   <td>-20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testNgDependencyDemo.test3()[pri:0, instance:testNgDependency.testNgDependencyDemo@5ce81285]">test3</td> 
+  <td>main@1518864111</td>   <td></td> </tr>
+<tr bgcolor="9c6faa">  <td>18/09/27 02:50:01</td>   <td>-43</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testNgDependencyDemo.test4()[pri:0, instance:testNgDependency.testNgDependencyDemo@5ce81285]">test4</td> 
+  <td>main@1518864111</td>   <td></td> </tr>
 </table>
