--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,20 +4,10 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testNgDependency.testNgDependencyDemo</td>
+<td>parrelTestingExample.testNGParallelTestingDemo</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>test4</td>
-<td>abc </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>test5</td>
-<td>xyz </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
@@ -26,8 +16,11 @@
 <tr>
 <td>&nbsp;</td>
 <td>test3</td>
-<td>abc </td>
-</tr>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>test1</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
