--- a/test-output/old/Suite1/classes.html
+++ b/test-output/old/Suite1/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testNgDependency.testNgDependencyDemo</td>
+<td>testNgGrouping.testNgGroupingDemo</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -12,21 +12,21 @@
 <tr>
 <td>&nbsp;</td>
 <td>test4</td>
-<td>abc </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>test5</td>
-<td>xyz </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>test2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>test2</td>
+<td>smoke sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>test3</td>
-<td>abc </td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>test1</td>
+<td>sanity </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
